# neural_networks_solomonoff_induction

./: pyproject.toml
