[project]
name = "neural_networks_solomonoff_induction"
version = "0.0.1"
description = "Aim to finding the best NN architecture to excel the chomsky hierarchy"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "Apache-2.0"}
dependencies = [
    "absl-py",
    "dm-haiku",
    "dm-tree",
    "jax[cuda12]",
    "jaxtyping",
    "numpy",
    "optax",
    "tqdm",
    "typing-extensions",
    "einshape @ git+https://github.com/deepmind/einshape",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
repository = "https://github.com/cnm13ryan/neural_networks_solomonoff_induction"

[project.scripts]
neural_networks_solomonoff_induction = "neural_networks_solomonoff_induction.main:cli"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.9",
]
test = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.pdm.build]
includes = [
    "neural_networks_solomonoff_induction",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportCallIssue = "none"
